--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,30 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap");
+
+:root {
+  --color-primary: #adc698;
+  --color-primary-dark: #51693a;
+  --color-primary-light: #d5e2ca;
+
+  --color-text: #000000;
+  --color-text-interactable: #000000;
+  --color-background: #ffffff;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-background: #1b1b1b;
+    --color-text: #fff;
+  }
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Nunito", sans-serif;
+
+  background-color: var(--color-background);
+  color: var(--color-text);
 }
 
 a {
