--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap");
-
 :root {
   --color-primary: #adc698;
   --color-primary-dark: #51693a;
@@ -8,6 +6,8 @@
   --color-text: #000000;
   --color-text-interactable: #000000;
   --color-background: #ffffff;
+
+  --color-error: red;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -21,7 +21,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: 'Comic Sans MS';
 
   background-color: var(--color-background);
   color: var(--color-text);
